--- a/Silver-Arowana/Silver-Arowana.Shell/Pages/DesktopSetting.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/Pages/DesktopSetting.xaml
@@ -6,9 +6,9 @@
       xmlns:local="clr-namespace:Silver_Arowana.Shell.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="DesktopSetting" Background="Transparent">
+      Title="DesktopSetting">
 
-    <TabControl Grid.Row="1">
+    <TabControl Grid.Row="1" Background="Transparent">
         <TabItem Header="静态壁纸设置">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -20,26 +20,40 @@
                     <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
 
-                <Grid>
+                <Grid  Background="White">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="3*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <GroupBox Header="预览"/>
+                    <GroupBox Header="预览">
+                        <Grid>
+                            <Image Source="../recycle.png" Width="30" Height="30" Panel.ZIndex="1" Margin="5" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                            <Label Content="回收站" Foreground="White" Panel.ZIndex="1" FontSize="10" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,30,0,0"/>
+                            <Image Source="../flower.jpg" Stretch="UniformToFill"/>
+                        </Grid>
+                    </GroupBox>
 
                     <GroupBox Header="选择壁纸" Grid.Row="1">
-                        <WrapPanel>
-                            <Image Source="../logo.png"/>
-                        </WrapPanel>
+                        <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Disabled" ScrollViewer.HorizontalScrollBarVisibility="Auto">
+                            <WrapPanel>
+                                <Image Source="../logo.png"/>
+                                <Image Source="../logo.png"/>
+                                <Image Source="../logo.png"/>
+                                <Image Source="../logo.png"/>
+                                <Image Source="../logo.png"/>
+                                <Image Source="../logo.png"/>
+                                <Image Source="../logo.png"/>
+                            </WrapPanel>
+                        </ScrollViewer>
                     </GroupBox>
                 </Grid>
 
-                <Grid Grid.Column="1">
+                <Grid Grid.Column="1" Background="White">
                     <GroupBox Header="在线壁纸"/>
                 </Grid>
 
-                <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Background="Transparent">
                     <Button Content="壁纸设置" Width="88" Height="28" HorizontalAlignment="Right"></Button>
                     <Button Content="应用" Width="88" Height="28" HorizontalAlignment="Right" Margin="0,0,100,0"></Button>
                 </Grid>
