flat button style

--- a/Silver-Arowana/Silver-Arowana.Shell/App.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:Silver_Arowana.Shell"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/ButtonStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
