--- a/Silver-Arowana/Silver-Arowana.Shell/App.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/App.xaml
@@ -6,6 +6,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/Default.xaml"/>
+
                 <ResourceDictionary Source="Styles/ButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
