--- a/Silver-Arowana/Silver-Arowana.Shell/Pages/DesktopSetting.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/Pages/DesktopSetting.xaml
@@ -25,8 +25,8 @@
             </Grid>
 
             <StackPanel Grid.Row="1">
-                <ToggleButton Content="静态壁纸设置" Style="{StaticResource FlatButtonStyle}"/>
-                <ToggleButton Content="动态壁纸设置" Style="{StaticResource FlatButtonStyle}"/>
+                <ToggleButton Content="静态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked"/>
+                <ToggleButton Content="动态壁纸设置" Style="{StaticResource FlatButtonStyle}" Checked="ToggleButton_Checked"/>
             </StackPanel>
         </Grid>
 
