--- a/Silver-Arowana/Silver-Arowana.Shell/Pages/StaticWallpaper.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/Pages/StaticWallpaper.xaml
@@ -18,7 +18,7 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="57.4"/>
         </Grid.RowDefinitions>
 
         <Grid  Background="White">
@@ -49,8 +49,8 @@
         </Grid>
 
         <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Background="Transparent">
-            <Button Content="壁纸设置" Width="88" Height="28" HorizontalAlignment="Right"></Button>
-            <Button Content="应用" Width="88" Height="28" HorizontalAlignment="Right" Margin="0,0,100,0"></Button>
+            <Button Content="壁纸设置" Width="88" Height="28" HorizontalAlignment="Right" VerticalAlignment="Top"></Button>
+            <Button Content="" Width="88" Height="28" HorizontalAlignment="Right" Margin="0,0,100,0" VerticalAlignment="Top"></Button>
         </Grid>
     </Grid>
 
