--- a/Silver-Arowana/Silver-Arowana.Shell/App.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/App.xaml
@@ -6,8 +6,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <!--FontAwesome-->
+                <ResourceDictionary Source="FontAwesome/FontAwesomeStyle.xaml"/>
                 <ResourceDictionary Source="Themes/Default.xaml"/>
-
                 <ResourceDictionary Source="Styles/ButtonStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
