--- a/Silver-Arowana/Silver-Arowana.Shell/MainWindow.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/MainWindow.xaml
@@ -37,9 +37,9 @@
             <Label Content="Silver-Arowana" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="25" Foreground="Silver" FontWeight="Bold"/>
 
             <WrapPanel Grid.Row="1">
-                <controls:ImageButton Title="桌面设置" Subtitle="静态壁纸、动态壁纸" ImagePath="Icon/desktop.png" Click="btnDesktop_Click"/>
+                <controls:ImageButton Title="系统美化" Subtitle="静态壁纸、动态壁纸" ImagePath="Icon/desktop.png" Click="btnDesktop_Click"/>
                 <controls:ImageButton Title="系统管理" Subtitle="开机启动项、后台服务、网络监控" ImagePath="Icon/system.png"/>
-                <controls:ImageButton Title="系统信息" Subtitle="CPU、内存、显卡" ImagePath="Icon/information.png"/>
+                <controls:ImageButton Title="实用工具" Subtitle="CPU、内存、显卡" ImagePath="Icon/information.png"/>
             </WrapPanel>
         </Grid>
 
