--- a/Silver-Arowana/Silver-Arowana.Shell/Pages/StaticWallpaper.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/Pages/StaticWallpaper.xaml
@@ -54,13 +54,15 @@
 
                     <Grid Grid.Row="0" Width="300" VerticalAlignment="Center">
                         <Label Content="输入关键词" HorizontalAlignment="Left"/>
-                        <TextBox Width="120" Margin="75,0,0,0" HorizontalAlignment="Left"/>
-                        <Button Content="搜索" Width="88" Height="28" HorizontalAlignment="Left" Margin="210,0,0,0"/>
+                        <TextBox Width="120" Margin="75,0,0,0" HorizontalAlignment="Left" Name="text_Keyword"/>
+                        <Button Content="搜索" Width="88" Height="28" HorizontalAlignment="Left" Margin="210,0,0,0" Click="btn_SearchClick" IsDefault="True"/>
                     </Grid>
 
-                    <WrapPanel Name="panel_OnlineImgList">
-                        
-                    </WrapPanel>
+                    <ScrollViewer Grid.Row="2">
+                        <WrapPanel Name="panel_OnlineImgList" Grid.Row="2" ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                        </WrapPanel>
+                    </ScrollViewer>
                 </Grid>
             </GroupBox>
         </Grid>
