--- a/Silver-Arowana/Silver-Arowana.Shell/MessageBoxEx/WaitMessageBoxWindow.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/MessageBoxEx/WaitMessageBoxWindow.xaml
@@ -1,12 +1,12 @@
-﻿<tianxia:BlurWindow x:Class="Silver_Arowana.Shell.Dialog.WaitMessageBoxWindow"
+﻿<Window x:Class="Silver_Arowana.Shell.MessageBoxEx.WaitMessageBoxWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:tianxia="clr-namespace:TianXiaTech;assembly=BlurWindow"
-        xmlns:local="clr-namespace:Silver_Arowana.Shell.Dialog"
-        mc:Ignorable="d" MaxWidth="640" MinWidth="320"
-        Title="WaitMessageBoxWindow">
+        xmlns:local="clr-namespace:Silver_Arowana.Shell.MessageBoxEx"
+        mc:Ignorable="d" MaxWidth="640" Width="320" Height="280" MinWidth="320"
+        Title="WaitMessageBoxWindow" Closing="BlurWindow_Closing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="27.6"/>
@@ -34,4 +34,4 @@
             </Grid>
         </Grid>
     </Grid>
-</tianxia:BlurWindow>
+</Window>
