--- a/Silver-Arowana/Silver-Arowana.Shell/Windows/ImageWindow.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/Windows/ImageWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Silver_Arowana.Shell.Windows"
         mc:Ignorable="d"
         xmlns:tianxia="clr-namespace:TianXiaTech;assembly=BlurWindow" WindowStartupLocation="CenterScreen"
-        Title="ImageWindow" Height="450" Width="800">
+        Title="预览" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="27.6"/>
@@ -16,7 +16,16 @@
 
         <Image Grid.Row="1" Margin="10" Name="image"/>
 
+        <Label Content="图片放置方式" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,310,0"></Label>
+        <ComboBox Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,205,0" Width="100" SelectedIndex="0">
+            <ComboBoxItem>填充</ComboBoxItem>
+            <ComboBoxItem>适应</ComboBoxItem>
+            <ComboBoxItem>拉伸</ComboBoxItem>
+            <ComboBoxItem>平铺</ComboBoxItem>
+            <ComboBoxItem>居中</ComboBoxItem>
+        </ComboBox>
         <Button Content="预览" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,100,0" Width="88" Height="28" Click="btnPreview_Click"/>
         <Button Content="设置" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0" Width="88" Height="28" Click="btnSet_Click"/>
+
     </Grid>
 </tianxia:BlurWindow>
