--- a/Silver-Arowana/Silver-Arowana.Shell/MessageBoxEx/WaitMessageBoxWindow.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/MessageBoxEx/WaitMessageBoxWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="Silver_Arowana.Shell.MessageBoxEx.WaitMessageBoxWindow"
+﻿<tian:BlurWindow x:Class="Silver_Arowana.Shell.MessageBoxEx.WaitMessageBoxWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:tianxia="clr-namespace:TianXiaTech;assembly=BlurWindow"
         xmlns:local="clr-namespace:Silver_Arowana.Shell.MessageBoxEx"
-        mc:Ignorable="d" MaxWidth="640" Width="320" Height="280" MinWidth="320"
-        Title="WaitMessageBoxWindow" Closing="BlurWindow_Closing">
+        mc:Ignorable="d" MaxWidth="640" Width="320"  MinWidth="320"
+        xmlns:tian="clr-namespace:TianXiaTech;assembly=BlurWindow"
+        Title="WaitMessageBoxWindow" Closing="BlurWindow_Closing" Height="200" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <SolidColorBrush Color="White" Opacity=".6"/>
+    </Window.Background>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="27.6"/>
@@ -15,23 +19,18 @@
 
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="28"/>
-                <RowDefinition Height="90"/>
+                <RowDefinition/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
 
             <Grid Grid.Row="0">
-                <Label HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" Content="标题" Name="lbl_Title"></Label>
-            </Grid>
-
-            <Grid Grid.Row="1">
                 <TextBlock TextWrapping="WrapWithOverflow" Text="" VerticalAlignment="Center" HorizontalAlignment="Center" Name="tbk_Content"></TextBlock>
             </Grid>
 
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="1">
                 <Button Content="确定" Width="88" Height="28" HorizontalAlignment="Right" Margin="0,0,110,0" Name="btn_Ok" Click="btn_Ok_Click"></Button>
                 <Button Content="取消" Width="88" Height="28" HorizontalAlignment="Right" Margin="0,0,10,0" Name="btn_Cancel" Click="btn_Cancel_Click"></Button>
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</tian:BlurWindow>
