--- a/Silver-Arowana/Silver-Arowana.Shell/Windows/ImageWindow.xaml
+++ b/Silver-Arowana/Silver-Arowana.Shell/Windows/ImageWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d"
         xmlns:tianxia="clr-namespace:TianXiaTech;assembly=BlurWindow" WindowStartupLocation="CenterScreen"
         Title="预览" Height="450" Width="800">
+    <Window.ContextMenu>
+        <ContextMenu>
+            <MenuItem Header="复制图片路径" Click="MenuCopyPath_Click"></MenuItem>
+        </ContextMenu>
+    </Window.ContextMenu>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="27.6"/>
