dynamic video test

--- a/Master-Zhao/Master-Zhao.DynamicDesktop/MainWindow.xaml
+++ b/Master-Zhao/Master-Zhao.DynamicDesktop/MainWindow.xaml
@@ -3,10 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Silver_Arowana.DynamicDesktop"
+        xmlns:local="clr-namespace:Master_Zhao.DynamicDesktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" WindowState="Maximized">
+        Title="MainWindow" Height="450" Width="800" WindowState="Maximized" WindowStyle="None">
     <Grid>
-        <MediaElement Source="C:\Users\Administrator\Desktop\video_2000539939_mark.mp4"/>
+        <MediaElement x:Name="media" LoadedBehavior="Manual"/>
     </Grid>
 </Window>
