--- a/Master-Zhao/Master-Zhao.DynamicDesktop/App.xaml
+++ b/Master-Zhao/Master-Zhao.DynamicDesktop/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="Silver_Arowana.DynamicDesktop.App"
+﻿<Application x:Class="Master_Zhao.DynamicDesktop.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Silver_Arowana.DynamicDesktop"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Master_Zhao.DynamicDesktop"
+             StartupUri="MainWindow.xaml" Startup="Application_Startup">
     <Application.Resources>
          
     </Application.Resources>
