--- a/Master-Zhao/Master-Zhao.Shell/Pages/DynamicWallpaper.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Pages/DynamicWallpaper.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Master_Zhao.Shell.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="800" Loaded="Page_Loaded"
       Title="DynamicWallpaper">
 
     <Grid>
@@ -14,8 +14,8 @@
             <ColumnDefinition Width="250"/>
         </Grid.ColumnDefinitions>
 
-        <WrapPanel>
-            <Image Width="150" Height="150" Margin="10" MouseDown="SetDynamicBackground_MouseDown"/>
+        <WrapPanel Name="wrap">
+            
         </WrapPanel>
         
         <StackPanel Grid.Column="1">
