--- a/Master-Zhao/Master-Zhao.Shell/Styles/ButtonStyle.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/Styles/ButtonStyle.xaml
@@ -42,4 +42,8 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
+        
+    </Style>
 </ResourceDictionary>
